updates on html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,10 @@
 {% import 'macros.html' as macro%}
 <html lang="en">
-<head>    <title>News Home</title> </head>
-    <body>
+<head>
+    <title>News Home</title>
+
+</head>
+    <body style="background-color:#e1e2e3">
     <div style="display:block">
             <div id="us">
                  <h3>United States</h3>   {{ macro.displayHeadlines(us_headlines)}}
